--- a/css/forms.css
+++ b/css/forms.css
@@ -7,7 +7,7 @@ form.main-form>div {
 }
 
 form.main-form fieldset {
-    border: 1px solid#ccc;
+    border: 1px solid #ccc;
     max-width: 350px;
 }
 
@@ -15,14 +15,15 @@ form.main-form legend {
     margin-left: 0.5em;
     padding: 0.2em 0.5em;
     border-left: 1px solid #ccc;
-    border-right: 1px solid #ccc
+    border-right: 1px solid #ccc;
 }
 
 form.main-form input:required {
-    border: 1px solid red;
+    border: 1.25px solid red;
 }
 
-input[type="submit"] {
+form.main-form input[type="submit"] {
     border-radius: 4px;
-    padding: .3em
+    border: 1px solid #ccc;
+    padding: 0.3em 0.5em;
 }
